# zawansowane-metody-programowania

./: .gitignore  Dockerfile  README.md  alembic.ini  backend_test_connection.py  entrypoint.sh  initial_data.py  pyproject.toml  solution_design.md
alembic/: README.md  env.py
alembic/versions/: 60df8e1803e2_scientificcircle.py  67ff7c26c7fc_science_club.py  a09784e06775_harcownik_kickoff.py  bb347da8c21b_scienceclub.py
scripts/: format-imports.sh  format.sh  lint.sh
src/: main.py  utils.py
src/api/: api.py  helper.py
src/api/endpoints/: badge_reports.py  badges.py  groups.py  level_reports.py  login.py  reports.py  reports_history.py  users.py
src/core/: security.py  settings.py
src/crud/: __init__.py  crud_badge.py  crud_badge_report.py  crud_group.py  crud_level_report.py  crud_report.py  crud_reports_history.py  crud_user.py
src/db/: base.py  db.py  init_db.py
src/models/: __init__.py  badge.py  badge_report.py  group.py  level_report.py  report.py  reports_history.py  user.py
src/schemas/: __init__.py  badge.py  badge_report.py  group.py  level_report.py  report.py  reports_history.py  user.py
