[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Harcownik API"
version = "1.0"
description = "API for harcownik scout application"
authors = ["Pawel Polski <pawel.polski99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.9.1"
black = "22.1.0"
emails = "0.6"
fastapi = "0.95.0"
jinja2 = "3.1.2"
jose = "1.0.0"
jwt = "1.3.1"
psycopg2-binary = "2.9.6"
pydantic = "1.10.7"
pytest = "7.1.2"
pytest-mock = "3.5.1"
python-jose = "3.3.0"
python-multipart = "0.0.6"
SQLAlchemy = "1.4.45"
passlib = "1.7.4"
typing = "3.7.4.3"
tenacity = "8.2.2"
typing_extensions = "4.5.0"
uvicorn = "0.20.0"

[build-system.poetry]
requires = ["poetry-core>=1.0.0"]

[build-system.poetry.dependencies]
python = "^3.9"

[build-system.poetry.extras]
develop = ["pytest"]
